// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot active 1`] = `
<WithStyles(ForwardRef(Button))
  color="primary"
  onClick={[MockFunction]}
>
  <BrushIcon />
</WithStyles(ForwardRef(Button))>
`;

exports[`snapshot inactive 1`] = `
<WithStyles(ForwardRef(Button))
  color="default"
  onClick={[MockFunction]}
>
  <BrushIcon />
</WithStyles(ForwardRef(Button))>
`;
